Jython NEWS

Jython 2.7a1
  Bugs Fixed

Jython 2.5.3b2
  Bugs Fixed
    - [ 1536 ] NPE in org.python.jsr223.PyScriptEngine:187
    - [ 1640 ] cStringIO does not complain on getvalue after close
    - [ 1721 ] NPE when using JSR 223 (TestCase+Patch)
    - [ 1749 ] function descriptor doesn't work in interactive console
    - [ 1816 ] Jython Interactive Console makes system beep noise too much
    - [ 1829 ] test_socket.py failing on Ubuntu (Oneiric)
    - [ 1844 ] bad host returned by getsockname

Jython 2.5.3b1
  Bugs Fixed
    - [ 1727 ] Error in Jython 2.5.2 with os.stat and varargs
    - [ 1735 ] return type of os.read is unicode, not str
    - [ 1755 ] os.utime('/tmp/nonexistent-file', None) fails to raise OSError
    - [ 1768 ] sax.parse doesn't handle attributes with name 'id' correctly
    - [ 1803 ] _tcpsocket doesn't have 'family' attribute
    - [ 1804 ] _tcpsocket doesn't have 'type' and 'proto' attributes
    - [ 1809 ] socket.getaddrinfo sometimes returns an object that crashes in __str__
    - [ 1811 ] Recursive import bug w/ SQLAlchemy 0.7.3
    - [ 1819 ] Incorrect handling of Java object toString methods returning null
    - [ 1824 ] os.link() can silently fail
    - [ 1825 ] EnvironmentError.filename is `str` even if original name is `unicode`
    - [ 1828 ] Problems inheriting from long
    - [ 1833 ] Trouble passing Python objects through a Java class back to Python

Jython 2.5.2
  same as 2.5.2rc4

Jython 2.5.2rc4
  Bugs Fixed
    - [ 1667 ] thread.local subclasses with constructor params fail
    - [ 1698 ] warnings module fails under JSR-223
    - [ 1697 ] Wrong error message when http connection can not be established
    - [ 1210 ] Lib/socket.py doesn't allow IPv6 sockets and fails with an AssertionError
    - [ 1700 ] "virtualenv is not compatible" to 2.5.2rc3
    - [ 1701 ] Files are not flushed properly when opened from the EDT (partial fix)
  New Features
    - The socket module now includes ipv6 support